# swagger.json
@@ -21,79 +21,11 @@
     "https"
   ],
   "paths": {
-    "/": {
+    "/books": {
       "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "type": "string",
-                  "example": "Clean Code"
-                },
-                "authorId": {
-                  "type": "string",
-                  "example": "68d0177c50413afc5359590e"
-                },
-                "isbn": {
-                  "type": "string",
-                  "example": "9780132350884"
-                },
-                "genre": {
-                  "type": "string",
-                  "example": "Software Engineering"
-                },
-                "publishedYear": {
-                  "type": "number",
-                  "example": 2008
-                },
-                "pages": {
-                  "type": "number",
-                  "example": 464
-                },
-                "inStock": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "price": {
-                  "type": "number",
-                  "example": 39.99
-                }
-              }
-            }
-          }
+        "tags": [
+          "Books"
         ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/books/": {
-      "get": {
         "description": "",
         "responses": {
           "200": {
@@ -105,6 +37,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "parameters": [
           {
@@ -165,6 +100,9 @@
     },
     "/books/{id}": {
       "get": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "parameters": [
           {
@@ -190,6 +128,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "parameters": [
           {
@@ -257,6 +198,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "parameters": [
           {
@@ -282,8 +226,11 @@
         }
       }
     },
-    "/authors/": {
+    "/authors": {
       "get": {
+        "tags": [
+          "Authors"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -295,6 +242,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Authors"
+        ],
         "description": "",
         "parameters": [
           {
@@ -343,6 +293,9 @@
     },
     "/authors/{id}": {
       "get": {
+        "tags": [
+          "Authors"
+        ],
         "description": "",
         "parameters": [
           {
@@ -368,6 +321,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Authors"
+        ],
         "description": "",
         "parameters": [
           {
@@ -423,125 +379,9 @@
         }
       },
       "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
+        "tags": [
+          "Authors"
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "type": "string",
-                  "example": "Clean Code"
-                },
-                "authorId": {
-                  "type": "string",
-                  "example": "68d0177c50413afc5359590e"
-                },
-                "isbn": {
-                  "type": "string",
-                  "example": "9780132350884"
-                },
-                "genre": {
-                  "type": "string",
-                  "example": "Software Engineering"
-                },
-                "publishedYear": {
-                  "type": "number",
-                  "example": 2008
-                },
-                "pages": {
-                  "type": "number",
-                  "example": 464
-                },
-                "inStock": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "price": {
-                  "type": "number",
-                  "example": 39.99
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
         "description": "",
         "parameters": [
           {
